client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: client-container
          image: meetdev.azurecr.io/devconnect-frontend:beff51f
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-app
  ports:
    - name: client-port
      port: 80
      targetPort: 80
  type: ClusterIP
