server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: server-container
          image: meetdev.azurecr.io/devconnect-backend:6fd6c0e
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
   app: server
spec:
  selector:
    app: server-app
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  type: ClusterIP
