ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devconnect-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: server-service
                port:
                  number: 4000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-service
                port:
                  number: 80
